[gd_scene load_steps=20 format=2]

[ext_resource path="res://Controller.gd" type="Script" id=1]
[ext_resource path="res://Scripts/camera.gd" type="Script" id=2]
[ext_resource path="res://Scenes/spawner_enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/purple.png" type="Texture" id=4]
[ext_resource path="res://Scripts/stars.gd" type="Script" id=5]
[ext_resource path="res://Scripts/ship.gd" type="Script" id=6]
[ext_resource path="res://sprites/a-wing_512/A-Wing_down.PNG" type="Texture" id=7]
[ext_resource path="res://sprites/a-wing_512/A-Wing_still.PNG" type="Texture" id=8]
[ext_resource path="res://sprites/a-wing_512/A-Wing_turn.PNG" type="Texture" id=9]
[ext_resource path="res://Sprites/a-wing_512/A-Wing_up.PNG" type="Texture" id=10]
[ext_resource path="res://GUI.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scripts/shooter_gui.gd" type="Script" id=12]
[ext_resource path="res://Scripts/audio_player.gd" type="Script" id=13]

[sub_resource type="Animation" id=1]

resource_name = "down"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 7 ) ]
}

[sub_resource type="Animation" id=2]

resource_name = "idle"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}

[sub_resource type="Animation" id=3]

resource_name = "left"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=5]

resource_name = "up"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 10 ) ]
}

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="space_shooter" type="Node2D"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="camera_shake" type="Camera2D" parent="." index="0"]

anchor_mode = 0
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
script = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="spawner_enemy" parent="." index="1" instance=ExtResource( 3 )]

[node name="BackgroundParent" type="Node2D" parent="." index="2"]

editor/display_folded = true

[node name="AuxBackground" type="Sprite" parent="BackgroundParent" index="0"]

position = Vector2( 513.383, 304.164 )
scale = Vector2( 3.9964, 2.30608 )
texture = ExtResource( 4 )

[node name="Background" type="Sprite" parent="BackgroundParent" index="1"]

position = Vector2( 255.155, 344.846 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
script = ExtResource( 5 )
_sections_unfolded = [ "Offset", "Transform", "Z Index" ]
velocity = Vector2( 0, 100 )

[node name="Background2" type="Sprite" parent="BackgroundParent" index="2"]

position = Vector2( 767.071, 344.994 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
script = ExtResource( 5 )
_sections_unfolded = [ "Offset", "Transform", "Z Index" ]
velocity = Vector2( 0, 100 )

[node name="Background3" type="Sprite" parent="BackgroundParent" index="3"]

position = Vector2( 767.82, -161.682 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
script = ExtResource( 5 )
_sections_unfolded = [ "Offset", "Transform", "Z Index" ]
velocity = Vector2( 0, 100 )

[node name="Background4" type="Sprite" parent="BackgroundParent" index="4"]

position = Vector2( 255.903, -161.682 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
script = ExtResource( 5 )
_sections_unfolded = [ "Offset", "Transform", "Z Index" ]
velocity = Vector2( 0, 100 )

[node name="Background5" type="Sprite" parent="BackgroundParent" index="5"]

position = Vector2( 255.704, -672.193 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
script = ExtResource( 5 )
_sections_unfolded = [ "Offset", "Transform", "Z Index" ]
velocity = Vector2( 0, 100 )

[node name="Background6" type="Sprite" parent="BackgroundParent" index="6"]

position = Vector2( 767.62, -672.193 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
script = ExtResource( 5 )
_sections_unfolded = [ "Offset", "Transform", "Z Index" ]
velocity = Vector2( 0, 100 )

[node name="ship" type="Area2D" parent="." index="3"]

editor/display_folded = true
position = Vector2( 515.444, 364.98 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 6 )
_sections_unfolded = [ "Transform" ]
armor = 4

[node name="anim" type="AnimationPlayer" parent="ship" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/down = SubResource( 1 )
anims/idle = SubResource( 2 )
anims/left = SubResource( 3 )
anims/right = SubResource( 4 )
anims/up = SubResource( 5 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ship" index="1"]

position = Vector2( 0.666765, -0.170871 )
scale = Vector2( 3.76172, 4.82166 )
shape = SubResource( 6 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="sprite" type="Sprite" parent="ship" index="2"]

position = Vector2( 0.693071, -0.23889 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 7 )
flip_h = true
_sections_unfolded = [ "Animation", "Material", "Offset", "Pause", "Transform", "Visibility", "Z Index" ]

[node name="cannons" type="Node2D" parent="ship" index="3"]

editor/display_folded = true
position = Vector2( -132.124, -112.429 )
scale = Vector2( 0.256331, 0.30804 )

[node name="left" type="Position2D" parent="ship/cannons" index="0"]

position = Vector2( 408.3, 300.501 )
_sections_unfolded = [ "Transform" ]

[node name="right" type="Position2D" parent="ship/cannons" index="1"]

position = Vector2( 628.92, 298.108 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="CanvasLayer" type="CanvasLayer" parent="." index="4"]

pause_mode = 2
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
_sections_unfolded = [ "Pause" ]

[node name="GUI" parent="CanvasLayer" index="0" instance=ExtResource( 11 )]

script = ExtResource( 12 )

[node name="audio_player" type="Node" parent="." index="5"]

script = ExtResource( 13 )
_sections_unfolded = [ "Pause" ]

[node name="music_player" type="AudioStreamPlayer2D" parent="audio_player" index="0"]

position = Vector2( 500.689, 309.829 )
stream = null
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1
_sections_unfolded = [ "Transform", "Z Index" ]


